--- a/config/site_config.yml
+++ b/config/site_config.yml
@@ -1,7 +1,7 @@
 site:
-  title:       My Website
-  app_name:    my_app
-  app_repo:    git@github.com:mriddle/my_app.git
+  title:       HTML5 WebSocket Hack
+  app_name:    websockets_chat
+  app_repo:    git@github.com:mriddle/websockets_chat.git
   app_server:
 
   deploy_user: admin
